TEST_PROGRAMS/VALID/05/empty_struct.go
/* Empty struct. */

package main

type empt struct {
	
}

func main() {
	// Do nothing
}
