TEST_PROGRAMS/INVALID/05/missin_closing_brace_at_end.go
/* Missing brace at the end. */

package main

func main() {
	// Do nothing
// Error: missing closing brace
